security/keycloak/k8s/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    tier: middleware
    type: security
